Fixed social share buttons clipping

--- a/public/styles/player.css
+++ b/public/styles/player.css
@@ -449,7 +449,7 @@
 }
 
 .share-menu .menu-btn:checked~.menu {
-    height: 34px;
+    height: 50px;
 }
 .liked .feather{
     fill: #FF6961;
